--- a/Pokedex/Main.storyboard
+++ b/Pokedex/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="522-uD-CXd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -10,17 +10,17 @@
     </dependencies>
     <scenes>
         <!--Home-->
-        <scene sceneID="qKP-P4-GWQ">
+        <scene sceneID="MWE-Ag-gTb">
             <objects>
-                <viewController id="vi9-Gx-fJY" customClass="CollectionViewController" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="LLl-5k-uFy">
+                <viewController id="sFq-Tg-sVi" customClass="CollectionViewController" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8lZ-a0-9y7">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="mKA-w6-wkt">
-                                <rect key="frame" x="0.0" y="117" width="414" height="660"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="iEh-2R-FaO">
+                                <rect key="frame" x="0.0" y="161" width="414" height="616"/>
                                 <color key="backgroundColor" systemColor="systemCyanColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="g1O-xM-Hm8">
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="jJb-sc-CTV">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -28,55 +28,102 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Pesquisar" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NZ7-sh-fLG">
-                                <rect key="frame" x="35" y="63" width="257" height="34"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Pesquisar" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8pd-RD-IIF">
+                                <rect key="frame" x="35" y="107" width="271" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tuC-u2-fYU">
-                                <rect key="frame" x="332" y="60" width="50" height="50"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZAr-zg-R2B">
+                                <rect key="frame" x="328" y="99" width="50" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="AzV-TO-Q1V"/>
-                                    <constraint firstAttribute="width" constant="50" id="BJK-zp-hUY"/>
+                                    <constraint firstAttribute="width" constant="50" id="07k-aC-7wY"/>
+                                    <constraint firstAttribute="height" constant="50" id="43l-dm-aWF"/>
                                 </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="Perfil"/>
                                 <connections>
-                                    <action selector="tappedProfileButton:" destination="vi9-Gx-fJY" eventType="touchUpInside" id="7Ko-9c-xHK"/>
+                                    <action selector="tappedProfileButton:" destination="sFq-Tg-sVi" eventType="touchUpInside" id="gNg-io-wal"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="AeB-yK-OJ7"/>
+                        <viewLayoutGuide key="safeArea" id="DkK-wa-gnF"/>
                         <color key="backgroundColor" systemColor="systemCyanColor"/>
                         <constraints>
-                            <constraint firstItem="mKA-w6-wkt" firstAttribute="top" secondItem="tuC-u2-fYU" secondAttribute="bottom" constant="7" id="0kV-LR-LGV"/>
-                            <constraint firstItem="tuC-u2-fYU" firstAttribute="leading" secondItem="NZ7-sh-fLG" secondAttribute="trailing" constant="40" id="7ek-oA-MIQ"/>
-                            <constraint firstItem="NZ7-sh-fLG" firstAttribute="leading" secondItem="AeB-yK-OJ7" secondAttribute="leading" constant="35" id="Ci3-No-lBZ"/>
-                            <constraint firstItem="tuC-u2-fYU" firstAttribute="top" secondItem="AeB-yK-OJ7" secondAttribute="top" constant="12" id="HKb-KW-Is0"/>
-                            <constraint firstItem="AeB-yK-OJ7" firstAttribute="trailing" secondItem="mKA-w6-wkt" secondAttribute="trailing" id="IWI-Zi-TIq"/>
-                            <constraint firstItem="NZ7-sh-fLG" firstAttribute="top" secondItem="AeB-yK-OJ7" secondAttribute="top" constant="15" id="X19-yq-2Gy"/>
-                            <constraint firstItem="AeB-yK-OJ7" firstAttribute="bottom" secondItem="mKA-w6-wkt" secondAttribute="bottom" constant="36" id="erz-xQ-G61"/>
-                            <constraint firstItem="AeB-yK-OJ7" firstAttribute="trailing" secondItem="tuC-u2-fYU" secondAttribute="trailing" constant="32" id="oCo-jd-kGX"/>
-                            <constraint firstItem="mKA-w6-wkt" firstAttribute="leading" secondItem="AeB-yK-OJ7" secondAttribute="leading" id="weI-C4-j17"/>
+                            <constraint firstItem="8pd-RD-IIF" firstAttribute="top" secondItem="DkK-wa-gnF" secondAttribute="top" constant="15" id="3ZZ-fm-WGS"/>
+                            <constraint firstItem="ZAr-zg-R2B" firstAttribute="leading" secondItem="8pd-RD-IIF" secondAttribute="trailing" constant="22" id="9Gw-OJ-v6a"/>
+                            <constraint firstItem="iEh-2R-FaO" firstAttribute="top" secondItem="ZAr-zg-R2B" secondAttribute="bottom" constant="12" id="PKB-h1-E3n"/>
+                            <constraint firstItem="DkK-wa-gnF" firstAttribute="bottom" secondItem="iEh-2R-FaO" secondAttribute="bottom" constant="36" id="dJu-lg-6ud"/>
+                            <constraint firstItem="iEh-2R-FaO" firstAttribute="leading" secondItem="DkK-wa-gnF" secondAttribute="leading" id="jDi-KI-mBo"/>
+                            <constraint firstItem="8pd-RD-IIF" firstAttribute="leading" secondItem="DkK-wa-gnF" secondAttribute="leading" constant="35" id="qHj-KL-bLc"/>
+                            <constraint firstItem="DkK-wa-gnF" firstAttribute="trailing" secondItem="ZAr-zg-R2B" secondAttribute="trailing" constant="36" id="qcb-aC-rkM"/>
+                            <constraint firstItem="DkK-wa-gnF" firstAttribute="trailing" secondItem="iEh-2R-FaO" secondAttribute="trailing" id="sEd-HA-iDG"/>
+                            <constraint firstItem="ZAr-zg-R2B" firstAttribute="centerY" secondItem="8pd-RD-IIF" secondAttribute="centerY" id="vDv-Kx-dQu"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Home" image="BotaoHome" id="Y6U-m5-y0a"/>
+                    <tabBarItem key="tabBarItem" title="Home" image="BotaoHome" id="6w1-Uf-iKU"/>
+                    <navigationItem key="navigationItem" id="CDU-PY-s8c"/>
                     <connections>
-                        <outlet property="collectionView" destination="mKA-w6-wkt" id="eFW-RG-L4h"/>
-                        <outlet property="profileButton" destination="tuC-u2-fYU" id="ytr-sJ-syp"/>
+                        <outlet property="collectionView" destination="iEh-2R-FaO" id="aGe-1c-tVM"/>
+                        <outlet property="profileButton" destination="ZAr-zg-R2B" id="Iys-2Q-GiB"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="K9l-no-dmF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BCm-sS-cgN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1766.6666666666667" y="79.6875"/>
         </scene>
-        <!--My Tab Bar Constroller-->
-        <scene sceneID="C0z-UK-s5Q">
+        <!--Item-->
+        <scene sceneID="2ig-xt-vaI">
             <objects>
-                <tabBarController storyboardIdentifier="TabBar" automaticallyAdjustsScrollViewInsets="NO" id="522-uD-CXd" customClass="MyTabBarConstroller" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController id="BsM-u7-uxX" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Eh2-tT-AIf"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="g8L-6T-TOX">
+                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="4UZ-fK-LQS" kind="relationship" relationship="rootViewController" id="Px0-Tq-bZd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oBm-AC-Z0F" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="35" y="804"/>
+        </scene>
+        <!--FavoritesViewController-->
+        <scene sceneID="8bE-LY-4O9">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Favorites" referencedIdentifier="FavoritesViewController" id="4UZ-fK-LQS" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="koH-5v-VON"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wke-1h-lbi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="928" y="806"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="IZQ-dr-mfQ">
+            <objects>
+                <navigationController id="sHG-6P-XA4" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="pF9-Hr-08x"/>
+                    <navigationItem key="navigationItem" id="KZx-b8-qHY"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FVI-cg-MIl">
+                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="sFq-Tg-sVi" kind="relationship" relationship="rootViewController" id="daK-Wi-krW"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FgW-cg-lzk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="857" y="80"/>
+        </scene>
+        <!--My Tab Bar Constroller-->
+        <scene sceneID="YUd-Tv-zVZ">
+            <objects>
+                <tabBarController storyboardIdentifier="TabBar" automaticallyAdjustsScrollViewInsets="NO" id="eDt-yz-HB4" customClass="MyTabBarConstroller" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="tt2-m8-lMe">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="rJN-DP-7Ag">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -90,38 +137,18 @@
                         </tabBarAppearance>
                     </tabBar>
                     <connections>
-                        <segue destination="vi9-Gx-fJY" kind="relationship" relationship="viewControllers" id="b5K-2c-qI6"/>
-                        <segue destination="MA5-HU-hML" kind="relationship" relationship="viewControllers" id="ddT-tk-DHu"/>
+                        <segue destination="sHG-6P-XA4" kind="relationship" relationship="viewControllers" id="Uwu-zv-psA"/>
+                        <segue destination="BsM-u7-uxX" kind="relationship" relationship="viewControllers" id="Biq-iT-XsN"/>
                     </connections>
                 </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="YWn-ce-98u" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="p7p-Uk-nCY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="856.52173913043487" y="79.6875"/>
-        </scene>
-        <!--Favoritos-->
-        <scene sceneID="rDL-of-mMs">
-            <objects>
-                <viewController id="MA5-HU-hML" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="CTw-zu-es9">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="mJq-4f-ocp"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Favoritos" image="BotaoFavoritos" id="71f-qa-daM"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="8Hm-Oc-HkW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1767" y="801"/>
+            <point key="canvasLocation" x="36" y="80"/>
         </scene>
     </scenes>
     <resources>
-        <image name="BotaoFavoritos" width="53" height="50"/>
         <image name="BotaoHome" width="48" height="45"/>
         <image name="Perfil" width="26" height="27"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemCyanColor">
             <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
