--- a/Pokedex/Main.storyboard
+++ b/Pokedex/Main.storyboard
@@ -28,11 +28,6 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Pesquisar" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NZ7-sh-fLG">
-                                <rect key="frame" x="35" y="63" width="257" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tuC-u2-fYU">
                                 <rect key="frame" x="332" y="60" width="50" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -46,16 +41,21 @@
                                     <action selector="tappedProfileButton:" destination="vi9-Gx-fJY" eventType="touchUpInside" id="7Ko-9c-xHK"/>
                                 </connections>
                             </button>
+                            <searchBar contentMode="redraw" fixedFrame="YES" searchBarStyle="minimal" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZFd-fg-h91">
+                                <rect key="frame" x="46" y="63" width="264" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="vi9-Gx-fJY" id="lRb-c5-8kJ"/>
+                                </connections>
+                            </searchBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="AeB-yK-OJ7"/>
                         <color key="backgroundColor" systemColor="systemCyanColor"/>
                         <constraints>
                             <constraint firstItem="mKA-w6-wkt" firstAttribute="top" secondItem="tuC-u2-fYU" secondAttribute="bottom" constant="7" id="0kV-LR-LGV"/>
-                            <constraint firstItem="tuC-u2-fYU" firstAttribute="leading" secondItem="NZ7-sh-fLG" secondAttribute="trailing" constant="40" id="7ek-oA-MIQ"/>
-                            <constraint firstItem="NZ7-sh-fLG" firstAttribute="leading" secondItem="AeB-yK-OJ7" secondAttribute="leading" constant="35" id="Ci3-No-lBZ"/>
                             <constraint firstItem="tuC-u2-fYU" firstAttribute="top" secondItem="AeB-yK-OJ7" secondAttribute="top" constant="12" id="HKb-KW-Is0"/>
                             <constraint firstItem="AeB-yK-OJ7" firstAttribute="trailing" secondItem="mKA-w6-wkt" secondAttribute="trailing" id="IWI-Zi-TIq"/>
-                            <constraint firstItem="NZ7-sh-fLG" firstAttribute="top" secondItem="AeB-yK-OJ7" secondAttribute="top" constant="15" id="X19-yq-2Gy"/>
                             <constraint firstItem="AeB-yK-OJ7" firstAttribute="bottom" secondItem="mKA-w6-wkt" secondAttribute="bottom" constant="36" id="erz-xQ-G61"/>
                             <constraint firstItem="AeB-yK-OJ7" firstAttribute="trailing" secondItem="tuC-u2-fYU" secondAttribute="trailing" constant="32" id="oCo-jd-kGX"/>
                             <constraint firstItem="mKA-w6-wkt" firstAttribute="leading" secondItem="AeB-yK-OJ7" secondAttribute="leading" id="weI-C4-j17"/>
@@ -65,6 +65,7 @@
                     <connections>
                         <outlet property="collectionView" destination="mKA-w6-wkt" id="eFW-RG-L4h"/>
                         <outlet property="profileButton" destination="tuC-u2-fYU" id="ytr-sJ-syp"/>
+                        <outlet property="searchBar" destination="ZFd-fg-h91" id="QBZ-qX-pCl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K9l-no-dmF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
