--- a/Pokedex/Cell/SearchCollectionViewCell.xib
+++ b/Pokedex/Cell/SearchCollectionViewCell.xib
@@ -28,7 +28,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemCyanColor"/>
                         <constraints>
                             <constraint firstItem="FV2-zy-IPP" firstAttribute="centerX" secondItem="S71-e6-Gtr" secondAttribute="centerX" id="980-jT-VF9"/>
                             <constraint firstItem="FV2-zy-IPP" firstAttribute="centerY" secondItem="S71-e6-Gtr" secondAttribute="centerY" id="Erl-Cg-3lU"/>
@@ -53,8 +53,8 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="systemCyanColor">
+            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
