--- a/Pokedex/Cell/HomeCollection/HomeCollectionViewCell.xib
+++ b/Pokedex/Cell/HomeCollection/HomeCollectionViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -70,7 +70,7 @@
             <connections>
                 <outlet property="backGroundView" destination="skq-z7-7Pm" id="CdX-sy-A17"/>
                 <outlet property="iconImageView" destination="7u8-fe-iMk" id="jrn-Ai-Voe"/>
-                <outlet property="label" destination="4d8-fA-75O" id="Clr-lg-JXh"/>
+                <outlet property="namePokemonLabel" destination="4d8-fA-75O" id="Clr-lg-JXh"/>
             </connections>
             <point key="canvasLocation" x="371.01449275362324" y="125.22321428571428"/>
         </collectionViewCell>
